[project]
name = "repotrace"
version = "0.1.0"
description = "Local-first code intelligence for coding agents and CLI workflows."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "repotrace contributors" }]
keywords = ["code-intelligence", "static-analysis", "coding-agents", "sqlite", "ast"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/niclejeune/repotrace"
Repository = "https://github.com/niclejeune/repotrace"
Issues = "https://github.com/niclejeune/repotrace/issues"

[project.scripts]
repotrace = "repotrace.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["repotrace"]
